compiler/test_files/typing/good/testfile-dot-on-return.psc
class S { 
    i32 a;
}
S foo() {}

i32 main() {
    foo().a;
}
