compiler/test_files/typing/bad/testfile-arrow-1.psc
i32 main() { print(1.ToFloat()); }